CSS Centering fixes
Horizontal scrollbar no longer shows up

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #top, #bottom, #center {
     text-align: center;
-    width: 100%;
+    left: 50%;
+    transform: translateX(-50%);
     position: absolute;
 }
 
@@ -10,7 +11,7 @@
 
 #center {
     top: 50%;
-    margin-top: -0.5em;
+    transform: translate(-50%, -50%);
 }
 
 #bottom {
